tests/ui/generic-const-items/missing-or-inferred-type.stderr
error[E0308]: mismatched types
  --> $DIR/missing-or-inferred-type.rs:19:18
   |
LL |     const K<T> = ();
   |             -    ^^ expected type parameter `T`, found `()`
   |             |
   |             expected this type parameter
   |
   = note: expected type parameter `T`
                   found unit type `()`

error: missing type for `const` item
  --> $DIR/missing-or-inferred-type.rs:19:15
   |
LL |     const K<T> = ();
   |               ^ help: provide a type for the associated constant: `()`

error[E0195]: lifetime parameters or bounds on associated constant `Q` do not match the trait declaration
  --> $DIR/missing-or-inferred-type.rs:23:13
   |
LL |     const Q<'a>: &'a str;
   |            ---- lifetimes in impl do not match this associated constant in trait
...
LL |      const Q = "";
   |             ^ lifetimes do not match associated constant in trait

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/missing-or-inferred-type.rs:36:13
   |
LL | const _<T>: _ = 0;
   |             ^ not allowed in type signatures

error: missing type for `const` item
  --> $DIR/missing-or-inferred-type.rs:23:13
   |
LL |      const Q = "";
   |             ^ help: provide a type for the associated constant: `: &str`

error: missing type for `const` item
  --> $DIR/missing-or-inferred-type.rs:32:11
   |
LL | const _<T> = loop {};
   |           ^
   |
help: provide a type for the item
   |
LL | const _<T>: <type> = loop {};
   |           ++++++++

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0121, E0195, E0308.
For more information about an error, try `rustc --explain E0121`.
